frontend/app/styles/app.css
body {
    margin: 0px;
    background-color: #d5dae6;
    font-family: 'Droid Sans', sans-serif;
}

.container {
    display: -webkit-flex;
    display: flex;
    flex-wrap: wrap;
    -webkit-flex-direction: row;
   flex-direction: row;
   min-height: 98vh;
}

.main-content {
    flex: 1 ;
}

.nav-panel {
    margin: 0;
    padding-bottom: 0.5em;
    width: 200px;
    min-width: 100px;
    background-color: #364760;
    color: #f0f4f6;
}

.nav-panel > h1 {
    margin: 0 0 0 0;
    padding-left: 1em;
    padding-top: 16px;
    padding-bottom: 16px;
    height: 38px;
    background-color: #2a394f;
}

.nav-panel > ul {
    margin-top: 2em;
    list-style: none;

}

.nav-panel > ul > li {
    margin-bottom: 2em;
    font-weight: bold;
}

.header {
    background-color: #364760;
    color: #f0f4f6;
    width: 100%;
    height: 70px;
}

.inner-container {
    padding-right: 1em;
}

.title {
    padding-left: 1em;
    background-color: #eef1f7;
    padding-top: 1em;
    padding-bottom: 1em;
}

.title > h2 {
    margin: 0px;
    margin-left: 0.5em;
    color: #687189;
}

.project-item {
    padding-left: 1em;
    color: #8c97b2;
}

.project-item > h3 {
    color: #687189;
    background-color: #eef1f7;
    margin-bottom: 0px;
    padding: 0.7em 0.2em 0.7em 0.7em;
}

.project-item > p {
    margin: 0px;
    background-color: #ffffff;
    padding: 0.7em 0.2em 0.7em 1.2em
}

@media only screen and (max-device-width : 480px) {
    .nav-panel {
        width: 100%;
        height: 250px;
    }

    .header {
        display: none;
    }
}

